[gd_scene load_steps=3 format=3 uid="uid://b5qfaw1r1db5f"]

[ext_resource type="Script" uid="uid://bscjlso2ecyr8" path="res://scenes/ui/main_menu.gd" id="1_guuao"]
[ext_resource type="Theme" uid="uid://bm1af7yexnpiq" path="res://scenes/ui/ui_themes_01.tres" id="2_fe2o3"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_guuao")

[node name="Title" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 300
text = "Game Name"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 500.0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("2_fe2o3")

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="play" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 75
text = "PLAY"

[node name="settings" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 75
text = "SETTINGS"

[node name="credits" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 75
text = "CREDITS"

[node name="quit" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 75
text = "QUIT"

[node name="SettingsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="back" type="Button" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 75
text = "BACK"

[node name="FULLSCREEN" type="CheckBox" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "FULLSCREEN
"

[node name="mainvolslider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/mainvolslider"]
custom_minimum_size = Vector2(484, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 484.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "MAIN VOLUME"
horizontal_alignment = 1

[node name="musicvolslider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/musicvolslider"]
custom_minimum_size = Vector2(484, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 484.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "MUSIC VOLUME"
horizontal_alignment = 1

[node name="sfxvolslider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/sfxvolslider"]
custom_minimum_size = Vector2(484, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 484.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "SFX VOLUME"
horizontal_alignment = 1

[node name="CreditsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "A Game by Developer"
horizontal_alignment = 1
autowrap_mode = 2

[node name="back" type="Button" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 75
text = "BACK"

[connection signal="pressed" from="CenterContainer/MainButtons/play" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/settings" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/credits" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/quit" to="." method="_on_start_pressed"]
